--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
